@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright (c) 1997-2010 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997-2014 Oracle and/or its affiliates. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -41,6 +41,7 @@
 package javax.mail.internet;
 
 import java.net.*;
+import java.util.concurrent.atomic.AtomicInteger;
 import javax.mail.Session;
 
 /**
@@ -59,7 +60,7 @@ class UniqueValue {
     /**
      * A global unique number, to ensure uniqueness of generated strings.
      */
-    private static int id = 0;
+    private static AtomicInteger id = new AtomicInteger();
 
     /**
      * Get a unique value for use in a multipart boundary string.
@@ -70,10 +71,11 @@ class UniqueValue {
      */
     public static String getUniqueBoundaryValue() {
 	StringBuffer s = new StringBuffer();
+	long hash = s.hashCode();
 
 	// Unique string is ----=_Part_<part>_<hashcode>.<currentTime>
-	s.append("----=_Part_").append(getUniqueId()).append("_").
-	  append(s.hashCode()).append('.').
+	s.append("----=_Part_").append(id.getAndIncrement()).append("_").
+	  append(hash).append('.').
 	  append(System.currentTimeMillis());
 	return s.toString();
     }
@@ -83,11 +85,10 @@ class UniqueValue {
      *
      * This implementation generates it by concatenating a newly
      * created object's <code>hashCode()</code>, a global ID
-     * (incremented on every use), the current
-     * time (in milliseconds), the string "JavaMail", and
-     * this user's local address generated by 
+     * (incremented on every use), the current time (in milliseconds),
+     * and the host name from this user's local address generated by 
      * <code>InternetAddress.getLocalAddress()</code>.
-     * (The address defaults to "javamailuser@localhost" if
+     * (The host name defaults to "localhost" if
      * <code>getLocalAddress()</code> returns null.)
      *
      * @param ssn Session object used to get the local address
@@ -102,22 +103,17 @@ class UniqueValue {
 	else {
 	    suffix = "javamailuser@localhost"; // worst-case default
 	}
+	int at = suffix.lastIndexOf('@');
+	if (at >= 0)
+	    suffix = suffix.substring(at);
 
 	StringBuffer s = new StringBuffer();
 
-	// Unique string is <hashcode>.<id>.<currentTime>.JavaMail.<suffix>
-	s.append(s.hashCode()).append('.').append(getUniqueId()).append('.').
-	  append(System.currentTimeMillis()).append('.').
-	  append("JavaMail.").
+	// Unique string is <hashcode>.<id>.<currentTime><suffix>
+	s.append(s.hashCode()).append('.').
+	  append(id.getAndIncrement()).append('.').
+	  append(System.currentTimeMillis()).
 	  append(suffix);
 	return s.toString();
-    }
-
-    /**
-     * Ensure ID is unique by synchronizing access.
-     * XXX - Could use AtomicInteger.getAndIncrement() in J2SE 5.0.
-     */
-    private static synchronized int getUniqueId() {
-	return id++;
     }
 }
